<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextLoginUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_user" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextPasswordUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_pass"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextConfirmPasswordUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_confirm_pass"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/buttonTerm"
        style="@style/MyButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/material_red_600"
        android:text="@string/lbl_btn_term" />


    <CheckBox
        android:id="@+id/checkboxTerm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_terms_conditions_agree" />

    <Button
        android:id="@+id/buttonConfirmSignIn"
        style="@style/MyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/lbl_btn_sign_up" />
</LinearLayout>