<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_user" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_pass"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSignUp"
            style="@style/MyButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight=".5"
            android:text="@string/lbl_btn_sign_in" />

        <Button
            android:id="@+id/buttonSignIn"
            style="@style/MyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight=".5"
            android:background="@color/material_red_600"
            android:text="@string/lbl_btn_sign_up" />

    </LinearLayout>

    <CheckBox
        android:layout_marginTop="8dp"
        android:id="@+id/checkboxKeepSigned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_keep_signed" />

</LinearLayout>
